Fix spacing

--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@ html, body {
 }
 
 body {
-  width: 100%;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,7 +18,6 @@ main {
   background-color: rgba(255, 255, 255, 0.7);
   padding: 3em;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   width: 100%;
@@ -28,13 +25,12 @@ main {
 
 .logo {
   width: 100%;
-  max-width: 30em;
+  max-width: 20em;
 }
 
 .contact {
-  margin-top: 5em;
+  margin-top: 3em;
   display: flex;
-  align-items: left;
   flex-direction: column;
 }
 
